# Project-Youtube-V1

./: .gitignore  LICENSE  README.md  YouTubeMock.sln  docker-compose.yml
Services/Auth/: Dockerfile  docker-compose.yml  pyproject.toml
Services/Auth/API/: API.csproj  App.py  DependencyInjection.cs  Dockerfile  Program.cs
Services/Auth/API/Controllers/: AuthController.cs  UserController.cs
Services/Auth/API/Endpoints/: AuthEndpoints.cs
Services/Auth/API/Properties/: launchSettings.json
Services/Auth/Application/: Application.csproj  DependencyInjection.cs
Services/Auth/Application/Commands/: CreateUser.cs  CreateUser.py  UpDateUser.cs  UpateUser.py
Services/Auth/Application/Errors/: AuthErrors.cs
Services/Auth/Application/Handlers/: CreateUser.py  CreateUserHandler.cs  DeleteUser.py  GetUserById.py  GetUserByUserName.py  GetUserHandler.cs  UpDateUserHandler.cs  UpateUser.py
Services/Auth/Application/Queries/: GetUserQuery.cs
Services/Auth/Application/Responces/: UserDTO.cs
Services/Auth/Application/Responses/: AuthResponse.cs  UserDTO.cs  UserDTO.py
Services/Auth/Core/: Core.csproj
Services/Auth/Core/Entities/: User.cs  User.py  UserId.cs
Services/Auth/Core/Repository/: IUserRepository.cs  InterUsers.py
Services/Auth/Core/ValueObjects/: EmailAddress.cs  Password.cs  UserName.cs
Services/Auth/Domain/: Domain.csproj
Services/Auth/Domain/Abstractions/: Entity.cs  Error.cs  Result.cs  ResultExtensions.cs
Services/Auth/Infrastructure/: DependencyInjection.cs  Infrastructure.csproj
Services/Auth/Requests/: login.http  register.http
(+30 files in other folders)
