[tool.poetry]
name = "project-youtube-service-auth"
version = "0.1.0"
description = ""
authors = ["Diego Rubio Carrera <diego.rubio.carrera@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
email-validator = "^2.1.0.post1"
pendulum = "^3.0.0"
motor = "^3.3.2"
fastapi = { extras = ["all"], version = "^0.109.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
